--- a/sec.html
+++ b/sec.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SEC - Phantom Picks</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+<body>
+  <div id="header"></div>
+
+  <main class="page-content">
+    <h1>SEC Odds</h1>
+    <p>Odds grid will load here.</p>
+    <div class="parlay-rail">Parlay Rail Placeholder</div>
+  </main>
+
+  <div id="footer"></div>
+  <script src="js/app.js"></script>
+</body>
+</html>
 
