--- a/auth.html
+++ b/auth.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login - Phantom Picks</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+<body>
+  <div id="header"></div>
+
+  <main class="page-content">
+    <h1>Login / Sign Up</h1>
+    <form id="authForm">
+      <label>Email:<br><input type="email" id="email" required></label><br><br>
+      <label>Password:<br><input type="password" id="password" required></label><br><br>
+      <button type="submit">Login</button>
+      <button type="button" id="signupBtn">Sign Up</button>
+    </form>
+  </main>
+
+  <div id="footer"></div>
+  <script src="js/app.js"></script>
+  <script src="js/auth.js"></script>
+</body>
+</html>
 
