--- a/index.html
+++ b/index.html
@@ -10,14 +10,71 @@
 <body>
   <div id="header"></div>
 
-  <main class="page-content">
-    <h1>Welcome to Phantom Picks</h1>
-    <p>This is a mock sports betting site with a $50 weekly allowance.</p>
-    <div class="parlay-rail">Parlay Rail Placeholder</div>
+  <main class="page-content no-rail">
+    <!-- HERO -->
+    <section class="hero" aria-label="Hero">
+      <div class="hero-bg" role="img" aria-label="Sports hero image"></div>
+      <div class="hero-overlay"></div>
+      <div class="hero-content">
+        <h1>Pick. Parlay. Prevail.</h1>
+        <p>Join friends, get $50 each week, build parlays with real odds, and track bragging rights over time.</p>
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="auth.html">Start Playing</a>
+          <a class="btn btn-ghost" href="#how-it-works">How it works</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- HOW IT WORKS -->
+    <section id="how-it-works" class="section">
+      <h2 class="section-title">How it works</h2>
+      <div class="card-grid three">
+        <article class="info-card">
+          <h3>1. Get $50 Weekly</h3>
+          <p>Every Monday, your balance resets to <strong>$50</strong>. No real money—just competition.</p>
+        </article>
+        <article class="info-card">
+          <h3>2. Build Your Parlay</h3>
+          <p>Select <strong>Moneyline</strong> or <strong>Over/Under</strong> across leagues. Up to <strong>10 legs</strong>, live payout shown.</p>
+        </article>
+        <article class="info-card">
+          <h3>3. Climb the Leaderboard</h3>
+          <p>Wins add to your total. Track streaks and group rankings over the season.</p>
+        </article>
+      </div>
+    </section>
+
+    <!-- FEATURED LEAGUES -->
+    <section class="section">
+      <h2 class="section-title">Featured Leagues</h2>
+      <div class="card-grid three">
+        <a class="league-tile" href="mlb.html">
+          <span class="league-acronym">MLB</span>
+          <span class="league-cta">View Odds →</span>
+        </a>
+        <a class="league-tile" href="nfl.html">
+          <span class="league-acronym">NFL</span>
+          <span class="league-cta">View Odds →</span>
+        </a>
+        <a class="league-tile" href="sec.html">
+          <span class="league-acronym">SEC</span>
+          <span class="league-cta">View Odds →</span>
+        </a>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="section section-cta">
+      <div class="cta-card">
+        <h2>Ready to make your first parlay?</h2>
+        <p>Sign in, join a group, and start stacking legs with real-time potential payout.</p>
+        <a class="btn btn-primary" href="auth.html">Login / Sign Up</a>
+      </div>
+    </section>
   </main>
 
   <div id="footer"></div>
+
   <script src="js/app.js"></script>
 </body>
 </html>
-
