--- a/index.html
+++ b/index.html
@@ -11,19 +11,30 @@
   <div id="header"></div>
 
   <main class="page-content no-rail">
-    <!-- HERO -->
-    <section class="hero" aria-label="Hero">
-      <div class="hero-bg" role="img" aria-label="Sports hero image"></div>
-      <div class="hero-overlay"></div>
-      <div class="hero-content">
-        <h1>Pick. Parlay. Prevail.</h1>
-        <p>Join friends, get $50 each week, build parlays with real odds, and track bragging rights over time.</p>
-        <div class="hero-actions">
-          <a class="btn btn-primary" href="auth.html">Start Playing</a>
-          <a class="btn btn-ghost" href="#how-it-works">How it works</a>
-        </div>
-      </div>
-    </section>
+  <!-- HERO -->
+<section class="hero" aria-label="Hero">
+  <div class="hero-bg" role="img" aria-label="Sports hero image"></div>
+  <div class="hero-overlay"></div>
+
+  <!-- NEW: Artwork on the right -->
+  <img
+    src="assets/img/hero_image.png"
+    alt="Athletes collage"
+    class="hero-art"
+    loading="lazy"
+    decoding="async"
+  />
+
+  <div class="hero-content">
+    <h1>Pick. Parlay. Prevail.</h1>
+    <p>Join friends, get $50 each week, build parlays with real odds, and track bragging rights over time.</p>
+    <div class="hero-actions">
+      <a class="btn btn-primary" href="auth.html">Start Playing</a>
+      <a class="btn btn-ghost" href="#how-it-works">How it works</a>
+    </div>
+  </div>
+</section>
+
 
     <!-- HOW IT WORKS -->
     <section id="how-it-works" class="section">
