--- a/mlb.html
+++ b/mlb.html
@@ -54,11 +54,12 @@
 
   <div id="footer"></div>
 
-  <script src="js/app.js"></script>
-  <script type="module">
-    import { initParlayPage } from "./js/parlay.js";
-    // Render with mock data for now; swap to odds.js later
-    initParlayPage("mlb");
-  </script>
+<script src="js/app.js"></script>
+<script src="js/parlay.js?v=1"></script>
+<script>
+  // call the global initializer
+  window.initParlayPage && window.initParlayPage("mlb");  /* nfl / sec accordingly */
+</script>
+
 </body>
 </html>
