--- a/nfl.html
+++ b/nfl.html
@@ -50,10 +50,12 @@
 
   <div id="footer"></div>
 
-  <script src="js/app.js"></script>
-  <script type="module">
-    import { initParlayPage } from "./js/parlay.js";
-    initParlayPage("nfl");
-  </script>
+ <script src="js/app.js"></script>
+<script src="js/parlay.js?v=1"></script>
+<script>
+  // call the global initializer
+  window.initParlayPage && window.initParlayPage("mlb");  /* nfl / sec accordingly */
+</script>
+
 </body>
 </html>
