--- a/sec.html
+++ b/sec.html
@@ -21,6 +21,8 @@
     <div class="odds-layout">
       <section id="odds-board" class="odds-board" aria-live="polite"></section>
 
+      <div id="rail"></div>
+
     </div>
   </main>
 
