--- a/mlb.html
+++ b/mlb.html
@@ -23,7 +23,7 @@
     <div class="odds-layout">
       <section id="odds-board" class="odds-board" aria-live="polite">
         <!-- JS will render cards here -->
-      </section>
+      <div id="rail"></div>
 
     </div>
   </main>
