--- a/mlb.html
+++ b/mlb.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MLB Odds – Phantom Picks</title>
   <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css?v=odds3">
 </head>
 <body>
   <div id="header"></div>
@@ -21,22 +21,24 @@
 
     <!-- Layout: odds board + right rail -->
     <div class="odds-layout">
-      <section id="odds-board" class="odds-board" aria-live="polite">
-     
-      <div id="rail"></div>
+      <section id="odds-board" class="odds-board" aria-live="polite"></section>
 
+      <!-- Right rail partial mounts here -->
+      <div id="rail"></div>
     </div>
   </main>
 
   <div id="footer"></div>
 
-<script src="js/app.js"></script>
-<script src="js/parlay.js?v=5"></script>
-
-<script>
-  // call the global initializer
-  window.initParlayPage && window.initParlayPage("mlb");  /* nfl / sec accordingly */
-</script>
-
+  <!-- Order matters: app.js loads the partials, then parlay.js wires behavior -->
+  <script src="js/app.js?v=2"></script>
+  <script src="js/parlay.js?v=5"></script>
+  <script>
+    /* Wait until the rail partial is injected, THEN init the page.
+       app.js dispatches 'rail:ready' after it inserts assets/partials/rail.html */
+    window.addEventListener('rail:ready', function () {
+      window.initParlayPage && window.initParlayPage('mlb');
+    });
+  </script>
 </body>
 </html>
