--- a/nfl.html
+++ b/nfl.html
@@ -28,12 +28,16 @@
 
   <div id="footer"></div>
 
- <script src="js/app.js"></script>
-<script src="js/parlay.js?v=1"></script>
+<script src="js/app.js?v=2"></script>
+<script src="js/parlay.js?v=5"></script>
 <script>
-  // call the global initializer
-  window.initParlayPage && window.initParlayPage("mlb");  /* nfl / sec accordingly */
+  // init AFTER the rail partial is injected
+  window.addEventListener('rail:ready', function () {
+    const sport = document.querySelector('.page--odds')?.dataset?.sport || 'nfl';
+    window.initParlayPage && window.initParlayPage(sport);
+  });
 </script>
+
 
 </body>
 </html>
