--- a/sec.html
+++ b/sec.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SEC Odds – Phantom Picks</title>
   <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css?v=odds3">
 </head>
 <body>
   <div id="header"></div>
@@ -28,12 +28,15 @@
 
   <div id="footer"></div>
 
-<script src="js/app.js"></script>
-<script src="js/parlay.js?v=1"></script>
+<script src="js/app.js?v=2"></script>
+<script src="js/parlay.js?v=5"></script>
 <script>
-  // call the global initializer
-  window.initParlayPage && window.initParlayPage("mlb");  /* nfl / sec accordingly */
+  window.addEventListener('rail:ready', function () {
+    const sport = document.querySelector('.page--odds')?.dataset?.sport || 'sec';
+    window.initParlayPage && window.initParlayPage(sport);
+  });
 </script>
+
 
 </body>
 </html>
