--- a/mlb.html
+++ b/mlb.html
@@ -6,6 +6,7 @@
   <title>MLB Odds – Phantom Picks</title>
   <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css?v=odds3">
+  <link rel="stylesheet" href="assets/css/cards.css?v=1">
 </head>
 <body>
   <div id="header"></div>
