--- a/mlb.html
+++ b/mlb.html
@@ -33,7 +33,10 @@
 
   <!-- Order matters: app.js loads the partials, then parlay.js wires behavior -->
   <script src="js/app.js?v=2"></script>
-  <script src="js/parlay.js?v=5"></script>
+  <script src="js/logos.js?v=1"></script>
+<script src="js/odds.js?v=1"></script>
+<script src="js/parlay.js?v=6"></script>
+
   <script>
     /* Wait until the rail partial is injected, THEN init the page.
        app.js dispatches 'rail:ready' after it inserts assets/partials/rail.html */
