--- a/nfl.html
+++ b/nfl.html
@@ -30,7 +30,10 @@
   <div id="footer"></div>
 
 <script src="js/app.js?v=2"></script>
-<script src="js/parlay.js?v=5"></script>
+  <script src="js/logos.js?v=1"></script>
+<script src="js/odds.js?v=1"></script>
+<script src="js/parlay.js?v=6"></script>
+
 <script>
   // init AFTER the rail partial is injected
   window.addEventListener('rail:ready', function () {
