--- a/nfl.html
+++ b/nfl.html
@@ -1,35 +1,35 @@
+<!-- nfl.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MLB Odds – Phantom Picks</title>
+  <title>NFL Odds – Phantom Picks</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="assets/css/styles.css?v=odds3">
-  <link rel="stylesheet" href="assets/css/cards.css?v=1">
+  <link rel="stylesheet" href="assets/css/styles.css?v=odds4">
+  <link rel="stylesheet" href="assets/css/cards.css?v=6">
 </head>
 <body>
-  <!-- header/footer are injected -->
+  <!-- header/footer are injected by app.js -->
   <div id="header"></div>
 
-  <!-- IMPORTANT: data-sport drives which odds we fetch -->
-  <main class="page-content page--odds" data-sport="mlb">
+  <main class="page-content page--odds" data-sport="nfl">
     <!-- Banner -->
-    <section class="league-banner league-mlb">
+    <section class="league-banner league-nfl">
       <div class="banner-inner">
-        <h1>MLB</h1>
+        <h1>NFL</h1>
         <p>Moneyline &amp; Totals. Build your parlay on the right.</p>
       </div>
     </section>
 
-    <!-- Filters (dropdown + search + refresh) -->
+    <!-- Filters (division + search + refresh) -->
     <section id="filters" class="filter-bar"></section>
 
-    <!-- Odds board + right rail mount -->
+    <!-- Odds board + right rail -->
     <div class="odds-layout">
       <section id="odds-board" class="odds-board" aria-live="polite"></section>
       <div id="rail"></div>
@@ -41,20 +41,25 @@
   <!-- JS: order matters -->
   <script src="js/app.js?v=2"></script>
 
-  <!-- If you're keeping the API key out of odds.js, include config.js here -->
-  <!-- <script src="js/config.js?v=1"></script> -->
+  <!-- Your Odds API key (create js/config.js with: window.ODDS_API_KEY = "…") -->
+  <script src="js/config.js?v=1"></script>
 
-  <!-- These two should be present if you added division/conference maps -->
+  <!-- (Optional) team → division maps used by filters; safe to omit -->
   <!-- <script src="js/meta.js?v=1"></script> -->
 
-  <script src="js/logos.js?v=1"></script>
-  <script src="js/odds.js?v=1"></script>
-  <script src="js/parlay.js?v=6"></script>
+  <!-- Logo path resolver for assets/img/{nfl|mlb|sec} -->
+  <script src="js/logos.js?v=2"></script>
+
+  <!-- Odds service (fetch + filters) -->
+  <script src="js/odds.js?v=3"></script>
+
+  <!-- Parlay / rail logic -->
+  <script src="js/parlay.js?v=8"></script>
+
   <script>
-    // Init after rail partial is injected
+    // Init after the rail partial is injected
     window.addEventListener('rail:ready', () => {
-      const sport = document.querySelector('.page--odds')?.dataset?.sport || 'mlb';
-      window.initParlayPage && window.initParlayPage(sport);
+      window.initParlayPage && window.initParlayPage('nfl');
     });
   </script>
 </body>
