--- a/auth.html
+++ b/auth.html
@@ -1,28 +1,103 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Phantom Picks</title>
-  <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Audiowide&family=Merriweather&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="utf-8" />
+  <title>Sign in • Phantom Picks</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="css/styles.css" rel="stylesheet" />
 </head>
 <body>
-  <div id="header"></div>
+  <!-- If your site uses a shared header include, keep it here -->
+  <!-- ... site-header ... -->
 
-  <main class="page-content">
-    <h1>Login / Sign Up</h1>
-    <form id="authForm">
-      <label>Email:<br><input type="email" id="email" required></label><br><br>
-      <label>Password:<br><input type="password" id="password" required></label><br><br>
-      <button type="submit">Login</button>
-      <button type="button" id="signupBtn">Sign Up</button>
-    </form>
+  <main class="page-content no-rail">
+    <div class="auth-wrap">
+      <div class="auth-card" id="authCard">
+        <div class="auth-tabs">
+          <button class="auth-tab active" data-tab="login" id="tabLogin">Sign in</button>
+          <button class="auth-tab" data-tab="signup" id="tabSignup">Create account</button>
+        </div>
+
+        <!-- Error box (hidden by default) -->
+        <div id="authError" class="auth-error" role="alert"></div>
+
+        <div class="auth-body">
+          <!-- LOGIN PANEL -->
+          <section id="panelLogin" class="auth-panel" aria-labelledby="tabLogin">
+            <h1 class="auth-title">Welcome back</h1>
+            <p class="auth-sub">Sign in to stack picks and compete on the leaderboard.</p>
+
+            <form id="formLogin" novalidate>
+              <div class="auth-grid full">
+                <div class="auth-field">
+                  <label for="loginEmail">Email</label>
+                  <input id="loginEmail" class="auth-input" type="email" name="email" autocomplete="email" required />
+                </div>
+                <div class="auth-field">
+                  <label for="loginPassword">Password</label>
+                  <input id="loginPassword" class="auth-input" type="password" name="password" autocomplete="current-password" required />
+                </div>
+              </div>
+
+              <div class="auth-row">
+                <a class="auth-link" href="#" aria-disabled="true" title="Coming soon">Forgot your password?</a>
+                <button class="btn btn-primary" type="submit">Sign in</button>
+              </div>
+            </form>
+
+            <div class="auth-sep"></div>
+            <p class="auth-muted">New here? <a class="auth-link" href="#signup" id="goSignup">Create an account</a></p>
+          </section>
+
+          <!-- SIGNUP PANEL -->
+          <section id="panelSignup" class="auth-panel" aria-labelledby="tabSignup" hidden>
+            <h1 class="auth-title">Create your account</h1>
+            <p class="auth-sub">No email verification yet—just pick a password and go.</p>
+
+            <form id="formSignup" novalidate>
+              <div class="auth-grid">
+                <div class="auth-field">
+                  <label for="signupEmail">Email</label>
+                  <input id="signupEmail" class="auth-input" type="email" name="email" autocomplete="email" required />
+                </div>
+                <div class="auth-field">
+                  <label for="signupDisplay">Display name (shown on leaderboards)</label>
+                  <input id="signupDisplay" class="auth-input" type="text" name="display_name" minlength="2" maxlength="24" required />
+                </div>
+                <div class="auth-field">
+                  <label for="signupPassword">Password</label>
+                  <input id="signupPassword" class="auth-input" type="password" name="password" autocomplete="new-password" minlength="8" required />
+                </div>
+                <div class="auth-field">
+                  <label for="signupPassword2">Confirm password</label>
+                  <input id="signupPassword2" class="auth-input" type="password" name="password2" autocomplete="new-password" minlength="8" required />
+                </div>
+              </div>
+
+              <div class="auth-actions">
+                <label style="display:flex;align-items:center;gap:8px;">
+                  <input id="signupTos" type="checkbox" required />
+                  <span>I agree to the <a class="auth-link" href="/privacy.html">Privacy Policy</a> &amp; <a class="auth-link" href="/terms.html">Terms</a>.</span>
+                </label>
+              </div>
+
+              <div class="auth-row">
+                <span></span>
+                <button class="btn btn-primary" type="submit">Create account</button>
+              </div>
+            </form>
+
+            <div class="auth-sep"></div>
+            <p class="auth-muted">Already have an account? <a class="auth-link" href="#login" id="goLogin">Sign in</a></p>
+          </section>
+        </div>
+      </div>
+    </div>
   </main>
 
-  <div id="footer"></div>
-  <script src="js/app.js"></script>
+  <!-- Optional shared footer -->
+  <!-- ... site-footer ... -->
+
   <script src="js/auth.js"></script>
 </body>
 </html>
-
