--- a/auth.html
+++ b/auth.html
@@ -6,7 +6,7 @@
   <title>Sign in · Phantom Picks</title>
 
   <!-- Load site styles -->
-  <link rel="stylesheet" href="/assets/css/styles.css?v=auth2">
+ <link rel="stylesheet" href="assets/css/styles.css?v=auth3">
   <!-- If this file lives in a subfolder, make the path relative instead, e.g.:
        ../assets/css/styles.css?v=auth2  or  ../../assets/css/styles.css?v=auth2 -->
 </head>
