--- a/auth.html
+++ b/auth.html
@@ -6,7 +6,7 @@
   <title>Sign in · Phantom Picks</title>
 
   <!-- Site CSS (adjust path if this file sits in a subfolder) -->
-  <link rel="stylesheet" href="/assets/css/styles.css?v=auth3">
+  <link rel="stylesheet" href="assets/css/styles.css?v=auth3">
 </head>
 
 <body class="auth-page">
@@ -14,7 +14,7 @@
   <header class="site-header site-header--auth">
     <a class="brand" href="/index.html">
       <!-- Use the same logo src you use on your other pages -->
-      <img class="site-logo" src="/assets/img/logo.svg" alt="Phantom Picks logo" />
+      <img class="site-logo" src="assets/img/Phantom_Picks_Logo.png" alt="Phantom Picks logo" />
       <span class="logo-text">Phantom Picks</span>
     </a>
 
