--- a/auth.html
+++ b/auth.html
@@ -12,7 +12,7 @@
 <body class="auth-page">
   <!-- Slim header: logo + wordmark only -->
   <header class="site-header site-header--auth">
-    <a class="brand" href="/index.html">
+    <a class="brand" href="/Game-Line/index.html">
       <!-- Use the same logo src you use on your other pages -->
       <img class="site-logo" src="assets/img/Phantom_Picks_Logo.png" alt="Phantom Picks logo" />
       <span class="logo-text">Phantom Picks</span>
